src/oscript/grammar/oscriptParser.java
// $ANTLR 3.4 C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g 2012-03-30 15:46:52

  package oscript.grammar;
  import java.util.Map; 
  import java.util.HashMap; 
  import oscript.*;
  import oscript.tree.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class oscriptParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BLOCK", "BOOLEAN", "COMMAND", "COMMENT", "DIGIT", "DOLLAR_IDENT", "EXP", "EXP_LIST", "FOREACH", "FUNCTION", "FUNC_CALL", "IDENT", "ID_LIST", "IF", "INDEXES", "INTEGER", "LETTER", "LIST", "LOOKUP", "MULTILINE_COMMENT", "NEGATE", "NUMBER", "OS", "RETURN", "STATEMENTS", "STRING_LITERAL", "TERNARY", "UNARY_MIN", "WS", "'!'", "'!='", "'%'", "'&&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "':'", "';'", "'<'", "'<-'", "'<='", "'='", "'=='", "'>'", "'>='", "'?'", "'['", "']'", "'^'", "'alert'", "'assert'", "'def'", "'each'", "'else'", "'for'", "'foreach'", "'if'", "'in'", "'null'", "'print'", "'println'", "'return'", "'size'", "'to'", "'while'", "'{'", "'||'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int BLOCK=4;
    public static final int BOOLEAN=5;
    public static final int COMMAND=6;
    public static final int COMMENT=7;
    public static final int DIGIT=8;
    public static final int DOLLAR_IDENT=9;
    public static final int EXP=10;
    public static final int EXP_LIST=11;
    public static final int FOREACH=12;
    public static final int FUNCTION=13;
    public static final int FUNC_CALL=14;
    public static final int IDENT=15;
    public static final int ID_LIST=16;
    public static final int IF=17;
    public static final int INDEXES=18;
    public static final int INTEGER=19;
    public static final int LETTER=20;
    public static final int LIST=21;
    public static final int LOOKUP=22;
    public static final int MULTILINE_COMMENT=23;
    public static final int NEGATE=24;
    public static final int NUMBER=25;
    public static final int OS=26;
    public static final int RETURN=27;
    public static final int STATEMENTS=28;
    public static final int STRING_LITERAL=29;
    public static final int TERNARY=30;
    public static final int UNARY_MIN=31;
    public static final int WS=32;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public oscriptParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public oscriptParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return oscriptParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g"; }


      public Map<String, Function> functions = new HashMap<String, Function>();
      private void defineFunction(String id, Object formalParamList, Object block) {
        CommonTree formalParamListTree = formalParamList == null ? new CommonTree() : (CommonTree)formalParamList; 
        CommonTree blockTree = (CommonTree)block; 
        String key = id + formalParamListTree.getChildCount(); 
        functions.put(key, new Function(id, formalParamListTree, blockTree)); 
      }


    public static class parse_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "parse"
    // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:51:1: parse : block EOF !;
    public final oscriptParser.parse_return parse() throws RecognitionException {
        oscriptParser.parse_return retval = new oscriptParser.parse_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token EOF2=null;
        oscriptParser.block_return block1 =null;


        CommonTree EOF2_tree=null;

        try {
            // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:52:3: ( block EOF !)
            // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:52:5: block EOF !
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_block_in_parse158);
            block1=block();

            state._fsp--;

            adaptor.addChild(root_0, block1.getTree());

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_parse160); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "parse"


    public static class block_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "block"
    // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:55:1: block : ( functionDecl | statement )* ( 'return' expression ( ';' )? )? -> ^( BLOCK ^( STATEMENTS ( statement )* ) ^( RETURN ( expression )? ) ) ;
    public final oscriptParser.block_return block() throws RecognitionException {
        oscriptParser.block_return retval = new oscriptParser.block_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal5=null;
        Token char_literal7=null;
        oscriptParser.functionDecl_return functionDecl3 =null;

        oscriptParser.statement_return statement4 =null;

        oscriptParser.expression_return expression6 =null;


        CommonTree string_literal5_tree=null;
        CommonTree char_literal7_tree=null;
        RewriteRuleTokenStream stream_69=new RewriteRuleTokenStream(adaptor,"token 69");
        RewriteRuleTokenStream stream_45=new RewriteRuleTokenStream(adaptor,"token 45");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        RewriteRuleSubtreeStream stream_functionDecl=new RewriteRuleSubtreeStream(adaptor,"rule functionDecl");
        try {
            // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:56:3: ( ( functionDecl | statement )* ( 'return' expression ( ';' )? )? -> ^( BLOCK ^( STATEMENTS ( statement )* ) ^( RETURN ( expression )? ) ) )
            // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:56:4: ( functionDecl | statement )* ( 'return' expression ( ';' )? )?
            {
            // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:56:4: ( functionDecl | statement )*
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==59) ) {
                    alt1=1;
                }
                else if ( (LA1_0==COMMAND||LA1_0==IDENT||(LA1_0 >= 57 && LA1_0 <= 58)||(LA1_0 >= 62 && LA1_0 <= 64)||(LA1_0 >= 67 && LA1_0 <= 68)||LA1_0==70||LA1_0==72) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:56:5: functionDecl
            	    {
            	    pushFollow(FOLLOW_functionDecl_in_block174);
            	    functionDecl3=functionDecl();

            	    state._fsp--;

            	    stream_functionDecl.add(functionDecl3.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:56:20: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_block178);
            	    statement4=statement();

            	    state._fsp--;

            	    stream_statement.add(statement4.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:56:32: ( 'return' expression ( ';' )? )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==69) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:56:33: 'return' expression ( ';' )?
                    {
                    string_literal5=(Token)match(input,69,FOLLOW_69_in_block183);  
                    stream_69.add(string_literal5);


                    pushFollow(FOLLOW_expression_in_block185);
                    expression6=expression();

                    state._fsp--;

                    stream_expression.add(expression6.getTree());

                    // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:56:53: ( ';' )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==45) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:56:53: ';'
                            {
                            char_literal7=(Token)match(input,45,FOLLOW_45_in_block187);  
                            stream_45.add(char_literal7);


                            }
                            break;

                    }


                    }
                    break;

            }


            // AST REWRITE
            // elements: expression, statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 57:5: -> ^( BLOCK ^( STATEMENTS ( statement )* ) ^( RETURN ( expression )? ) )
            {
                // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:57:8: ^( BLOCK ^( STATEMENTS ( statement )* ) ^( RETURN ( expression )? ) )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(BLOCK, "BLOCK")
                , root_1);

                // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:57:16: ^( STATEMENTS ( statement )* )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(STATEMENTS, "STATEMENTS")
                , root_2);

                // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:57:29: ( statement )*
                while ( stream_statement.hasNext() ) {
                    adaptor.addChild(root_2, stream_statement.nextTree());

                }
                stream_statement.reset();

                adaptor.addChild(root_1, root_2);
                }

                // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:57:41: ^( RETURN ( expression )? )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(RETURN, "RETURN")
                , root_2);

                // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:57:50: ( expression )?
                if ( stream_expression.hasNext() ) {
                    adaptor.addChild(root_2, stream_expression.nextTree());

                }
                stream_expression.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "block"


    public static class blockBracketed_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "blockBracketed"
    // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:60:1: blockBracketed : '{' ! block '}' !;
    public final oscriptParser.blockBracketed_return blockBracketed() throws RecognitionException {
        oscriptParser.blockBracketed_return retval = new oscriptParser.blockBracketed_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token char_literal8=null;
        Token char_literal10=null;
        oscriptParser.block_return block9 =null;


        CommonTree char_literal8_tree=null;
        CommonTree char_literal10_tree=null;

        try {
            // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:61:3: ( '{' ! block '}' !)
            // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:61:5: '{' ! block '}' !
            {
            root_0 = (CommonTree)adaptor.nil();


            char_literal8=(Token)match(input,73,FOLLOW_73_in_blockBracketed229); 

            pushFollow(FOLLOW_block_in_blockBracketed232);
            block9=block();

            state._fsp--;

            adaptor.addChild(root_0, block9.getTree());

            char_literal10=(Token)match(input,75,FOLLOW_75_in_blockBracketed234); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "blockBracketed"


    public static class blockOneLine_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "blockOneLine"
    // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:64:1: blockOneLine : ( functionDecl | statement | ( 'return' expression ( ';' )? ) ) -> ^( BLOCK ^( STATEMENTS statement ) ^( RETURN expression ) ) ;
    public final oscriptParser.blockOneLine_return blockOneLine() throws RecognitionException {
        oscriptParser.blockOneLine_return retval = new oscriptParser.blockOneLine_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal13=null;
        Token char_literal15=null;
        oscriptParser.functionDecl_return functionDecl11 =null;

        oscriptParser.statement_return statement12 =null;

        oscriptParser.expression_return expression14 =null;


        CommonTree string_literal13_tree=null;
        CommonTree char_literal15_tree=null;
        RewriteRuleTokenStream stream_69=new RewriteRuleTokenStream(adaptor,"token 69");
        RewriteRuleTokenStream stream_45=new RewriteRuleTokenStream(adaptor,"token 45");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        RewriteRuleSubtreeStream stream_functionDecl=new RewriteRuleSubtreeStream(adaptor,"rule functionDecl");
        try {
            // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:65:3: ( ( functionDecl | statement | ( 'return' expression ( ';' )? ) ) -> ^( BLOCK ^( STATEMENTS statement ) ^( RETURN expression ) ) )
            // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:65:4: ( functionDecl | statement | ( 'return' expression ( ';' )? ) )
            {
            // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:65:4: ( functionDecl | statement | ( 'return' expression ( ';' )? ) )
            int alt5=3;
            switch ( input.LA(1) ) {
            case 59:
                {
                alt5=1;
                }
                break;
            case COMMAND:
            case IDENT:
            case 57:
            case 58:
            case 62:
            case 63:
            case 64:
            case 67:
            case 68:
            case 70:
            case 72:
                {
                alt5=2;
                }
                break;
            case 69:
                {
                alt5=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }

            switch (alt5) {
                case 1 :
                    // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:65:5: functionDecl
                    {
                    pushFollow(FOLLOW_functionDecl_in_blockOneLine250);
                    functionDecl11=functionDecl();

                    state._fsp--;

                    stream_functionDecl.add(functionDecl11.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:65:20: statement
                    {
                    pushFollow(FOLLOW_statement_in_blockOneLine254);
                    statement12=statement();

                    state._fsp--;

                    stream_statement.add(statement12.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:65:32: ( 'return' expression ( ';' )? )
                    {
                    // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:65:32: ( 'return' expression ( ';' )? )
                    // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:65:33: 'return' expression ( ';' )?
                    {
                    string_literal13=(Token)match(input,69,FOLLOW_69_in_blockOneLine259);  
                    stream_69.add(string_literal13);


                    pushFollow(FOLLOW_expression_in_blockOneLine261);
                    expression14=expression();

                    state._fsp--;

                    stream_expression.add(expression14.getTree());

                    // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:65:53: ( ';' )?
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==45) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:65:53: ';'
                            {
                            char_literal15=(Token)match(input,45,FOLLOW_45_in_blockOneLine263);  
                            stream_45.add(char_literal15);


                            }
                            break;

                    }


                    }


                    }
                    break;

            }


            // AST REWRITE
            // elements: statement, expression
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 66:5: -> ^( BLOCK ^( STATEMENTS statement ) ^( RETURN expression ) )
            {
                // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:66:8: ^( BLOCK ^( STATEMENTS statement ) ^( RETURN expression ) )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(BLOCK, "BLOCK")
                , root_1);

                // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:66:16: ^( STATEMENTS statement )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(STATEMENTS, "STATEMENTS")
                , root_2);

                adaptor.addChild(root_2, stream_statement.nextTree());

                adaptor.addChild(root_1, root_2);
                }

                // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:66:40: ^( RETURN expression )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(RETURN, "RETURN")
                , root_2);

                adaptor.addChild(root_2, stream_expression.nextTree());

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "blockOneLine"


    public static class functionDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "functionDecl"
    // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:69:1: functionDecl : 'def' IDENT '(' ! ( idList )? ')' ! blockBracketed ;
    public final oscriptParser.functionDecl_return functionDecl() throws RecognitionException {
        oscriptParser.functionDecl_return retval = new oscriptParser.functionDecl_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal16=null;
        Token IDENT17=null;
        Token char_literal18=null;
        Token char_literal20=null;
        oscriptParser.idList_return idList19 =null;

        oscriptParser.blockBracketed_return blockBracketed21 =null;


        CommonTree string_literal16_tree=null;
        CommonTree IDENT17_tree=null;
        CommonTree char_literal18_tree=null;
        CommonTree char_literal20_tree=null;

        try {
            // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:70:3: ( 'def' IDENT '(' ! ( idList )? ')' ! blockBracketed )
            // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:70:5: 'def' IDENT '(' ! ( idList )? ')' ! blockBracketed
            {
            root_0 = (CommonTree)adaptor.nil();


            string_literal16=(Token)match(input,59,FOLLOW_59_in_functionDecl302); 
            string_literal16_tree = 
            (CommonTree)adaptor.create(string_literal16)
            ;
            adaptor.addChild(root_0, string_literal16_tree);


            IDENT17=(Token)match(input,IDENT,FOLLOW_IDENT_in_functionDecl304); 
            IDENT17_tree = 
            (CommonTree)adaptor.create(IDENT17)
            ;
            adaptor.addChild(root_0, IDENT17_tree);


            char_literal18=(Token)match(input,37,FOLLOW_37_in_functionDecl306); 

            // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:70:22: ( idList )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==IDENT) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // C:\\Users\\Felix\\workspace\\Algorithmik\\oscript\\src\\oscript\\grammar\\oscript.g:70:22: idList
                    {
                    pushFollow(FOLLOW_idList_in_functionDecl309);
                    idList19=idList();

                    state._fsp--;

                    adaptor.addChild(root_0, idList19.getTree());

                    }
                    break;

            }


            char_literal20=(Token)match(input,38,FOLLOW_38_in_functionDecl312); 

            pushFollow(FOLLOW_blockBracketed_in_functionDecl315);
            blockBracketed21=blockBracketed();

            state._fsp--;

            adaptor.addChild(root_0, blockBracketed21.getTree());

            defineFunction((IDENT17!=null?IDENT17.getText():null), (idList19!=null?((CommonTree)idList19.tree):null), (blockBracketed21!=null?((CommonTree)blockBracketed21.tree):null));

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "functionDecl"


